<?xml version="1.0"?>
<package format="2">
  <name>ros_py3</name>
  <version>0.0.1</version>
  <description>A minimal example</description>

  <maintainer email="amiller89@gmx.de">amiller</maintainer>
  <author email="amiller89@gmx.de">Artur Miller</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

</package>

